# Milkyway33

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  requirements.txt  skills-lock.json  test.txt  tsconfig.app.json  vercel.json  vite.config.ts
api/: index.py
backend/: pyproject.toml
backend/app/api/endpoints/: chat.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/app/services/: gemini.py  rate_limit.py  token_usage.py
backend/tests/: conftest.py  test_history.py  test_my_usage.py  test_rate_limit.py
docs/: axios-tanstack-query-error-handling-summary.md  codex-tasks-backend.md  codex-tasks-frontend.md  codex-tasks-settings-upgrade.md  codex-tasks-shared-token-usage.md  perf-rerender-refactor.md  prompt-template-system.md  qa-history-liked.md
project-docs/: LLM-ENGINEERING-ROADMAP.md  TECH-OVERVIEW.md
project-docs/phases/: phase-0-data-pipeline.md  phase-1-rag-core.md  phase-2-eval.md  phase-3-agent.md  phase-4-ops-safety.md  phase-5-devtools.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/api/: chat.ts  dailyUsage.ts
src/components/: ChatBot.tsx  ErrorBoundary.tsx
src/components/ai-elements/: context.tsx  message.tsx  (+5 more)
src/contexts/: ChatContext.tsx  ChatProvider.tsx  ThemeContext.tsx
src/hooks/: use-toast.ts  useChat.ts  usePromptTemplates.ts
src/lib/: apiClient.ts  db.ts  errors.ts  historyBuilder.ts
src/pages/: ChatPage.tsx  SettingsPage.tsx
src/services/: chatRepository.ts  promptTemplateRepository.ts
src/types/: vendor-shims.d.ts
tests/: landing-responsive.test.mjs
(+40 files in other folders)
