[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.103.2",
    "google-genai>=1.47.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "upstash-ratelimit>=1.1.0",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.22.0",
]
